--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <title>Tech and General</title>
 </head>
 <body>
-        <h1>Hello World</h1>
+        <h1>Welcome to Tech and General</h1>
 </body>
 </html>
