Add Google Ads script tag

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <link rel="stylesheet" href="assets/css/custom.css">
         <!-- END: Styles -->
         <!-- jQuery -->
-
+        <!--Google Ads-->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8351750776373019"
+        crossorigin="anonymous"></script>
     </head>
     <body>
         <!-- Preloader -->
